--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+          token: ${{ secrets.ALT_GITHUB_TOKEN }}
       - name: Pack
         run: ./.ci/source.sh
       - name: Upload
@@ -40,6 +41,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+          token: ${{ secrets.ALT_GITHUB_TOKEN }}
       - name: Set up cache
         uses: actions/cache@v4
         with:
@@ -73,6 +75,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+          token: ${{ secrets.ALT_GITHUB_TOKEN }}
       - name: Set up cache
         uses: actions/cache@v4
         with:
@@ -140,6 +143,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+          token: ${{ secrets.ALT_GITHUB_TOKEN }}
       - name: Set up cache
         uses: actions/cache@v4
         with:
@@ -186,6 +190,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+          token: ${{ secrets.ALT_GITHUB_TOKEN }}
       - name: Set up cache
         uses: actions/cache@v4
         with:
@@ -236,6 +241,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+          token: ${{ secrets.ALT_GITHUB_TOKEN }}
       - name: Set up cache
         uses: actions/cache@v4
         with:
